# dokker

./: CHANGELOG.md  README.md  const.py  docker-compose.yaml  dokker.yaml  konstrukt.py  pyproject.toml  x.py
.claude/plans/: sparkling-noodling-raccoon.md
.dokker/paper/: docker-compose.yaml  setup.yaml
.dokker/paper/configs/: fluss.yaml  lok.yaml  mikro.yaml  minio.yaml  port.yaml  rekuest.yaml
.dokker/paper/fakts/templates/: generic.yaml
.github/workflows/: release.yaml  tests.yaml
cookiecutter/: docker-compose.yml
dokker/: __init__.py  builders.py  cli.py  command.py  compose_spec.py  deployment.py  errors.py  helpers.py  log_watcher.py  setup.py  types.py
dokker/forms/: __init__.py  effects.py  form.py
dokker/loggers/: __init__.py  logging.py
dokker/projects/: __init__.py  base.py  copy.py  dokker.py  health_check.py  local.py
dokker/projects/contrib/: configmodel.py  konstruktor.py  setup.py
echo/: docker-compose.yml
init/: docker-compose.yaml  dokker.yaml
init/compositions/: generic.yaml
init/configs/: fluss.yaml  gateway.yaml  kluster.yaml  lok.yaml  mikro.yaml  minio.yaml  omero_ark.yaml  port.yaml  rekuest.yaml
tests/: conftest.py  test_basic_integration.py  test_builders.py  test_cli.py  test_command.py  test_compose_spec.py  test_konstruktor.py  test_lifecycle.py  test_log_roll.py  test_run_query.py  test_teardown_integration.py  test_up_down.py  utils.py
tests/configs/: basic-compose.yaml  docker-compose.yaml  lifecycle-compose.yaml  volume-compose.yaml
tests/configs/configs/: mikro_next.yaml  minio.yaml
tests/configs/mirror-src/: docker-compose.yml
tests/repos/: konstruktor.json
