[project]
name = "dokker"
version = "2.5.0"
description = "manager dokker compose projects (asynchronously) with python"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "koil>=3.1.1",
    "aiohttp>=3.9.1,<4",
    "certifi>=2023.11.17",
    "pydantic>2",
]


[tool.uv]
dev-dependencies =  [
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "ruff>=0.10",
    "cookiecutter>=2.5.0,<3",
    "python-semantic-release>=9.21.1",
    "pytest-cov>=6.2.1",
]

[tool.hatch.build.targets.sdist]
include = ["dokker"]

[tool.hatch.build.targets.wheel]
include = ["dokker"]

[tool.hatch.build]
include = [
    "dokker/py.typed"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
    "examples",
]

# Same as Black.
line-length = 300

[tool.ruff.lint]
extend-select = ["ANN", "D1"]
extend-ignore = ["ANN002", "ANN003", "D100", "ANN401"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["rath"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a running server",
    "public: marks tests that require a public api",
]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"

